@@ -12,7 +12,7 @@
   </variant>
 
   <variant id="Gluster" name="Gluster Layered Product" type="layered-product">
-    <product name="Gluster" version="2.3" short="Gluster" />
+    <release name="Gluster" version="2.3" short="Gluster" />
     <arches>
       <arch>x86_64</arch>
     </arches>
